# ml-eval-toolkit

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  basic_evaluation.py  model_comparison.py  prompt_regression.py  sample_data.json
src/ml_eval/: __init__.py  cli.py  config.py  db.py
src/ml_eval/api/: __init__.py  app.py  routes.py  schemas.py
src/ml_eval/datasets/: __init__.py  loader.py  schema.py  splitter.py
src/ml_eval/evaluation/: __init__.py  comparison.py  regression.py  runner.py
src/ml_eval/metrics/: __init__.py  base.py  bleu.py  llm_judge.py  rouge.py  rubric.py  semantic.py
src/ml_eval/reporting/: __init__.py  exporter.py  visualizer.py
tests/: conftest.py  test_cli.py  test_reporting.py
tests/test_api/: test_routes.py
tests/test_datasets/: test_loader.py  test_schema.py  test_splitter.py
tests/test_evaluation/: test_comparison.py  test_regression.py  test_runner.py
tests/test_metrics/: test_bleu.py  test_llm_judge.py  test_rouge.py  test_rubric.py  test_semantic.py
