[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-eval-toolkit"
version = "0.1.0"
description = "ML model evaluation and benchmarking toolkit with pluggable metrics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "George Castillo", email = "george@gcasti.dev" }]
keywords = ["ml", "evaluation", "llm", "benchmarking", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=3.0.0"]
llm = ["openai>=1.0.0"]
all = ["ml-eval-toolkit[semantic,llm]"]
dev = [
    "ml-eval-toolkit[all]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[project.scripts]
ml-eval = "ml_eval.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_eval"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
]
